--- a/css/stylecontact.css
+++ b/css/stylecontact.css
@@ -4,7 +4,6 @@
 
 .background-color-custom {
     background-color: #F5E9D4;
-    margin-bottom: 5px;
 }
 
 .btn-primary {
@@ -49,13 +48,18 @@
 }
 
 .breadcrumb {
-    background-color: transparent;
-    padding: 0 20px;
+    background-color: #da853d !important;
+    padding: 0 !important;
+    margin-bottom: 0 !important;
 }
 
 .breadcrumb-item a {
     color: white;
     text-decoration: none;
+}
+
+.breadcrumb-item::before {
+    color: white !important;
 }
 
 .breadcrumb-item.active {
@@ -136,5 +140,20 @@ iframe {
     .breadcrumb {
         justify-content: center;
         display: flex;
+    }
+}
+
+.container {
+    padding-bottom: 10%;
+}
+
+@media only screen and (max-width: 500px) {
+    .breadcrumb {
+        padding: 0.5rem 0 !important;
+    }
+
+    .breadcrumb-bar {
+        padding: 1rem 0 !important;
+
     }
 }
