--- a/css/stylecontact.css
+++ b/css/stylecontact.css
@@ -1,135 +1,140 @@
 #map {
     height: 400px;
 }
+
 .background-color-custom {
-    background-color: #F5E9D4; 
+    background-color: #F5E9D4;
+    margin-bottom: 5px;
 }
+
 .btn-primary {
     color: #fff;
     background-color: #838C48;
     border-color: #838C48;
     font-weight: 600;
 }
+
 .header-title {
     font-size: 24px;
-    position: relative; 
-    padding-bottom: 10px; 
-    margin-bottom: 20px; 
+    position: relative;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .header-title:after {
-    content: ''; 
-    display: block; 
-    margin-top: 10px; 
-    width: 50px; 
-    height: 3px; 
-    background-color: #838C48; 
-    position: absolute; 
-    left: 0; 
-    bottom: 0; 
+    content: '';
+    display: block;
+    margin-top: 10px;
+    width: 50px;
+    height: 3px;
+    background-color: #838C48;
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
+
 .contact-section {
     padding: 20px 0;
 }
+
 .contact-info {
     margin-top: 20px;
 }
+
 .breadcrumb-bar {
     background-color: #da853d;
     color: white;
     padding: 20px 0;
     margin-bottom: 0;
 }
+
 .breadcrumb {
     background-color: transparent;
     padding: 0 20px;
 }
+
 .breadcrumb-item a {
     color: white;
     text-decoration: none;
 }
+
 .breadcrumb-item.active {
     color: white;
 }
-.map-div { 
+
+.map-div {
     width: 100%;
     height: 600px;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction:column;
-  } 
-  iframe{
+    flex-direction: column;
+}
+
+iframe {
     width: 80%;
     height: 500px;
-    /* filter: invert(100%); */
-  }
+}
 
-
-
-/* Keyframes cho animation */
 @keyframes fadeInUp {
     from {
-      transform: translateY(20px);
-      opacity: 0;
+        transform: translateY(20px);
+        opacity: 0;
     }
+
     to {
-      transform: translateY(0);
-      opacity: 1;
+        transform: translateY(0);
+        opacity: 1;
     }
-  }
-  
-  /* Áp dụng animation cho mỗi phần tử với một độ trễ khác nhau */
-  .animated {
+}
+
+.animated {
     animation-name: fadeInUp;
     animation-duration: 0.8s;
     animation-fill-mode: both;
     animation-timing-function: ease-in-out;
-  }
-  
-  /* Đặt độ trễ khác nhau cho mỗi phần tử */
-  .breadcrumb-bar {
-    animation-delay: 0.2s;
-  }
-  
-  .map-div {
-    animation-delay: 0.4s;
-  }
-  
-  .contact-info {
-    animation-delay: 0.6s;
-  }
-  
-  .form-group {
-    animation-delay: 0.8s;
-  }
-  
-  /* Đặt animation-delay riêng biệt cho từng .form-group */
-  .form-group:nth-child(1) {
-    animation-delay: 0.8s;
-  }
-  
-  .form-group:nth-child(2) {
-    animation-delay: 1s;
-  }
-  
-  .form-group:nth-child(3) {
-    animation-delay: 1.2s;
-  }
-  
-  .form-group:nth-child(4) {
-    animation-delay: 1.4s;
-  }
-  
-  .btn-primary {
-    animation-delay: 1.6s;
-  }
-  @media (max-width: 576px) { /* Bootstrap breakpoint for small devices */
-    .breadcrumb {
-      justify-content: center;
-      display: flex;
-    }
-  }
-  
+}
 
-  
+
+.breadcrumb-bar {
+    animation-delay: 0.2s;
+}
+
+.map-div {
+    animation-delay: 0.4s;
+}
+
+.contact-info {
+    animation-delay: 0.6s;
+}
+
+.form-group {
+    animation-delay: 0.8s;
+}
+
+.form-group:nth-child(1) {
+    animation-delay: 0.8s;
+}
+
+.form-group:nth-child(2) {
+    animation-delay: 1s;
+}
+
+.form-group:nth-child(3) {
+    animation-delay: 1.2s;
+}
+
+.form-group:nth-child(4) {
+    animation-delay: 1.4s;
+}
+
+.btn-primary {
+    animation-delay: 1.6s;
+}
+
+@media (max-width: 576px) {
+    .breadcrumb {
+        justify-content: center;
+        display: flex;
+    }
+}
