--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,8 @@
 .footer {
     background-color: #e2d6c1;
     padding: 40px 0;
+    display: flex;
+    justify-content: center;
 }
 
 .footer-h5 {
@@ -16,20 +18,27 @@
     margin-bottom: 0.75rem;
 }
 
+.container-footer {
+    margin: 0 !important;
+    padding: 0 !important;
+    width: 1170px;
+
+}
+
 .btn-footer {
-        display: inline-block;
-        font-weight: 400;
-        text-align: center;
-        white-space: nowrap;
-        vertical-align: middle;
-        user-select: none;
-        border: 1px solid transparent;
-        padding: 0.375rem 0.75rem;
-        font-size: 1rem;
-        line-height: 1.5;
-        border-radius: 0.25rem;
-        transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-        cursor: pointer;
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    cursor: pointer;
 }
 
 .footer .btn {
@@ -96,7 +105,7 @@
     color: white;
     padding: 20px;
     font-size: 0.8em;
-    margin-bottom: 2px;
+    padding-bottom: -50%;
 }
 
 .footer1 .container1 {
@@ -120,13 +129,15 @@
     transition: transform 0.3s ease-in-out;
 }
 
-.abc {
+/* .abc {
     width: auto;
-}
+} */
 
 .center-logo {
     display: flex;
     justify-content: center;
+    background: #F5E9D4;
+    padding-top: 140px;
 }
 
 .logo {
@@ -138,7 +149,10 @@
 .row-footer {
     z-index: 1;
     position: relative;
-    top: 52px;
+}
+
+.col-auto {
+    background: #F5E9D4;
 }
 
 .bcd {
@@ -147,8 +161,8 @@
 }
 
 .button-upscroll {
-    background-color: #fe8366;
-    bottom: 167px;
+    background-color: #ff2f00;
+    bottom: 150px;
     right: 10px;
     padding: 10px 15px 10px 15px;
     border-radius: 100%;
@@ -169,9 +183,20 @@
         cursor: pointer;
     }
 
+    .center-logo {
+        display: flex;
+        justify-content: center;
+        background: #F5E9D4;
+        padding-top: 140px;
+    }
+
     .footer {
         background-color: #e2d6c1;
         padding: 21px 0;
+    }
+
+    .container {
+        margin-bottom: -70px;
     }
 
     .footer a,
@@ -267,6 +292,8 @@
     .footer .col-md-3 h5 {
         margin-bottom: 30px;
         font-size: 1.2em;
+        text-align: center;
+
     }
 
     .footer .col-md-3 a {
@@ -310,4 +337,9 @@
 
 .footer .col-md-3 a:hover {
     color: #337ab7;
+}
+
+.row {
+    margin-left: unset !important;
+    margin-right: unset !important;
 }
