--- a/css/header.css
+++ b/css/header.css
@@ -33,15 +33,19 @@ header {
   color: #303030 !important;
   font-size: 14px;
   font-weight: 500;
+  line-height: normal !important;
+  cursor: pointer;
 }
 .mobile-bar {
   display: none;
 }
+
 @media only screen and (max-width: 1170px) {
   .menu-container {
     display: none !important;
   }
 }
+
 
 @media only screen and (min-width: 1170px) {
   #icon-active {
@@ -210,6 +214,21 @@ a.article:hover {
 .list-group-item > span {
   font-weight: 700;
 }
+
+#item-container{
+position: relative;
+}
+#icon-fill-down {
+  display: none;
+}
+#item-container > #icon-fill-down {
+  position: absolute;
+  left: 50%;
+  top: 30px;
+  transform: translateX(-50%);
+
+}
+
 .dropdown-menu {
   position: absolute;
   top: 100% !important;
@@ -231,18 +250,27 @@ a.article:hover {
   border-left: unset !important;
   border-right: unset !important;
 }
+
+
 .nav-item {
   align-self: center;
+  height: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  top: 15px;
 }
+
 .nav-link {
   display: block;
   padding: 0 1rem !important;
 }
 
+.nav-link:hover {
+  color: #838c48 !important;
+}
+
 .active {
-  display: block;
-  padding: 15px !important;
-  line-height: normal !important;
   border: 2px solid !important;
   border-radius: 4px;
 }
@@ -283,11 +311,19 @@ a.article:hover {
   transition: all 0.2s ease-in !important;
   border-radius: 0 0 3px 3px !important;
   border-color: #e2d6c1 !important;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
 .dropdown:hover > .dropdown-menu {
   display: block;
 }
+.dropdown:hover > #icon-fill-down {
+  display: block;
+  line-height: normal;
+  text-align: center;
+
+}
+
 .dropdown-submenu {
   position: relative;
 }
@@ -295,43 +331,74 @@ a.article:hover {
 .dropdown-submenu > .dropdown-menu {
   top: 0;
   left: 100%;
-  margin-top: -6px;
-  margin-left: -1px;
+  margin-top: -40px;
+  margin-left: 0;
   -webkit-border-radius: 0 6px 6px 6px;
   -moz-border-radius: 0 6px 6px;
   border-radius: 0 6px 6px 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
 .dropdown-submenu:hover > .dropdown-menu {
   display: block;
 }
-
-.dropdown-submenu > a:after {
-  display: block;
-  content: ' ';
-  float: right;
-  width: 0;
-  height: 0;
-  border-color: transparent;
-  border-style: solid;
-  border-width: 5px 0 5px 5px;
-  border-left-color: #ccc;
-  margin-top: 5px;
-  margin-right: -10px;
+.custom-login {
+  display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+}
+.custom-login > li {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 28px;
+  padding: 0;
+  margin: 0;
+}
+.custom-login > span {
+  margin: 0 10px;
+  line-height: normal;
+}
+.custom-login > li > a {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  position: relative;
+  color: #000000;
+  font-size: 14px;
+font-weight: 600;
+box-shadow: none;
+text-decoration: none;
+}
+.custom-login > li > a > i {
+  margin-right: 10px;
+  border: 2px solid currentColor;
+  width: 40px;
+  height: 46px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
 }
 
-.dropdown-submenu:hover > a:after {
-  border-left-color: #fff;
+.custom-login > li > a:hover {
+  color: rgb(218, 133, 61);
 }
 
-.dropdown-submenu.pull-left {
-  float: none;
+i {
+  cursor: pointer;
 }
 
-.dropdown-submenu.pull-left > .dropdown-menu {
-  left: -100%;
-  margin-left: 10px;
-  -webkit-border-radius: 6px 0 6px 6px;
-  -moz-border-radius: 6px 0 6px 6px;
-  border-radius: 6px 0 6px 6px;
+.shop-icon:hover > i{
+  color: rgb(218, 133, 61) !important;
+}
+
+.translate-icon{
+  font-size: 20px;
+}
+
+.lang {
+  font-weight: 600 !important;
+  font-size: 14px !important;
 }
