--- a/css/footer.css
+++ b/css/footer.css
@@ -16,13 +16,24 @@
     margin-bottom: 0.75rem;
 }
 
-.btn {
-    width: 74%;
-    padding-left: 50%;
+.btn-footer {
+        display: inline-block;
+        font-weight: 400;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: middle;
+        user-select: none;
+        border: 1px solid transparent;
+        padding: 0.375rem 0.75rem;
+        font-size: 1rem;
+        line-height: 1.5;
+        border-radius: 0.25rem;
+        transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        cursor: pointer;
 }
 
 .footer .btn {
-    transition: background-color 0.3s, border-color 0.3s;
+    transition: background-color 0.4s, border-color 0.3s;
 }
 
 .footer .btn-success {
@@ -38,7 +49,6 @@
 }
 
 .social-icons a {
-    display: flex-start;
     margin-right: 10px;
     color: #666;
     transition: color 0.3s;
@@ -125,7 +135,7 @@
     padding: 3px;
 }
 
-.row {
+.row-footer {
     z-index: 1;
     position: relative;
     top: 52px;
@@ -186,7 +196,7 @@
         transition: background-color 0.3s, border-color 0.3s;
     }
 
-    .btn {
+    .btn-footer {
         margin-bottom: 10px;
         width: 50%;
     }
@@ -219,10 +229,9 @@
         margin-bottom: 10px;
     }
 
-    .row {
+    .row-footer {
         z-index: 1;
         position: relative;
-        top: 52px;
     }
 
     .center-logo {
