--- a/css/header.css
+++ b/css/header.css
@@ -27,7 +27,7 @@ header {
   display: none;
 }
 #icon-active > img {
-  width: 45px !important;
+  width: 48px !important;
 }
 .nav-link {
   color: #303030 !important;
@@ -36,6 +36,10 @@ header {
   line-height: normal !important;
   cursor: pointer;
 }
+.nav {
+  margin-bottom: revert !important;
+}
+
 .mobile-bar {
   display: none;
 }
@@ -46,6 +50,11 @@ header {
   }
 }
 
+@media only screen and (max-width: 576px) {
+  .auth-container {
+    display: none !important;
+  }
+}
 
 @media only screen and (min-width: 1170px) {
   #icon-active {
@@ -57,11 +66,28 @@ header {
   #sidebar {
     display: none !important;
   }
+  #sidebar-2 {
+    display: none !important;
+  }
   .overlay {
     display: none !important;
   }
 }
+#icon-inactive {
+  line-height: normal;
+}
 
+#icon-active {
+  line-height: normal;
+}
+.menu-icon {
+  align-self: center;
+  height: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  top: 19px !important;
+}
 /* Sidebar */
 
 #sidebar {
@@ -78,6 +104,24 @@ header {
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
 }
 
+#sidebar-2 {
+  width: 250px;
+  position: fixed;
+  top: 0;
+  right: -250px;
+  height: 100vh;
+  z-index: 999;
+  background: #fdf6ea;
+  color: #fff;
+  transition: all 0.3s;
+  overflow-y: scroll;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+}
+
+#sidebar-2.active {
+  right: 0;
+}
+
 #sidebar.active {
   right: 0;
 }
@@ -88,7 +132,7 @@ header {
   line-height: 35px;
   text-align: center;
   position: absolute;
-  top: 10px;
+  top: 23px;
   right: 10px;
   cursor: pointer;
   -webkit-transition: all 0.3s;
@@ -100,6 +144,34 @@ header {
 #dismiss:hover {
   background: #fdf6ea;
   color: black;
+  rotate: 180deg;
+}
+#back::after {
+  content: '\F135';
+  display: block;
+  float: left;
+  margin: 0 !important;
+  transform: scaleY(1.2);
+  font-family: 'bootstrap-icons';
+  font-size: 25px;
+  line-height: normal;
+  color: black;
+  rotate: 180deg;
+  cursor: pointer;
+}
+
+#back:hover:after {
+  content: '\F135';
+  display: block;
+  float: left;
+  margin: 0 !important;
+  transform: scaleY(1.2);
+  font-family: 'bootstrap-icons';
+  font-size: 25px;
+  line-height: normal;
+  color: #838c48;
+  rotate: 180deg;
+  cursor: pointer;
 }
 
 .overlay {
@@ -118,40 +190,10 @@ header {
   opacity: 1;
 }
 
-#sidebar .sidebar-header {
-  padding: 28px;
+.sidebar-header {
+  padding: 15px;
   background: #fdf6ea;
-}
-
-#sidebar ul.components {
-  padding: 20px 0;
-  border-bottom: 1px solid #47748b;
-}
-
-#sidebar ul p {
-  color: black;
-  padding: 10px;
-}
-
-#sidebar ul li a {
-  padding: 10px;
-  font-size: 1.1em;
-  display: block;
-}
-
-#sidebar ul li a:hover {
-  color: #fdf6ea;
-  background: black;
-}
-
-#sidebar ul li.active > a,
-a[aria-expanded='true'] {
-  color: black;
-  background: #fdf6ea;
-}
-
-a[data-toggle='collapse'] {
-  position: relative;
+  margin: 15px 0;
 }
 
 .dropdown-toggle::after {
@@ -160,35 +202,6 @@ a[data-toggle='collapse'] {
   top: 50%;
   right: 20px;
   transform: translateY(-50%);
-}
-
-/* ul ul a {
-  font-size: 0.9em !important;
-  padding-left: 30px !important;
-  background: #fdf6ea;
-} */
-
-ul.CTAs {
-  padding: 20px;
-}
-
-ul.CTAs a {
-  text-align: center;
-  font-size: 0.9em !important;
-  display: block;
-  border-radius: 5px;
-  margin-bottom: 5px;
-}
-
-a.download {
-  background: #fdf6ea;
-  color: black;
-}
-
-a.article,
-a.article:hover {
-  background: #fdf6ea !important;
-  color: black !important;
 }
 
 .list-group-item {
@@ -205,6 +218,31 @@ a.article:hover {
   cursor: pointer;
   font-size: 14px;
 }
+.list-group {
+  padding-top: 20px;
+}
+.list-group-subitem::after {
+  content: '>';
+  display: block;
+  float: left;
+  margin: 0 6px 0 0;
+  transform: scaleY(1.7);
+  line-height: normal;
+}
+.list-group-item:hover {
+  background-color: #838c48 !important;
+  color: #fff !important;
+}
+.list-group-subitem:hover::after {
+  content: '\F135';
+  display: block;
+  float: left;
+  margin: 0 !important;
+  transform: scaleY(1.2);
+  font-family: 'bootstrap-icons';
+  font-size: 25px;
+  line-height: normal;
+}
 .list-group-item.active {
   z-index: 2;
   color: #fff;
@@ -215,8 +253,8 @@ a.article:hover {
   font-weight: 700;
 }
 
-#item-container{
-position: relative;
+#item-container {
+  position: relative;
 }
 #icon-fill-down {
   display: none;
@@ -226,12 +264,11 @@ position: relative;
   left: 50%;
   top: 30px;
   transform: translateX(-50%);
-
 }
 
 .dropdown-menu {
   position: absolute;
-  top: 100% !important;
+  top: 120% !important;
   left: 0;
   z-index: 1000;
   display: none;
@@ -251,7 +288,6 @@ position: relative;
   border-right: unset !important;
 }
 
-
 .nav-item {
   align-self: center;
   height: 40px;
@@ -263,7 +299,7 @@ position: relative;
 
 .nav-link {
   display: block;
-  padding: 0 1rem !important;
+  /* padding: 0 1rem !important; */
 }
 
 .nav-link:hover {
@@ -311,7 +347,8 @@ position: relative;
   transition: all 0.2s ease-in !important;
   border-radius: 0 0 3px 3px !important;
   border-color: #e2d6c1 !important;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
 .dropdown:hover > .dropdown-menu {
@@ -321,7 +358,9 @@ position: relative;
   display: block;
   line-height: normal;
   text-align: center;
-
+  position: absolute;
+  left: 40%;
+  top: 30px;
 }
 
 .dropdown-submenu {
@@ -336,7 +375,8 @@ position: relative;
   -webkit-border-radius: 0 6px 6px 6px;
   -moz-border-radius: 0 6px 6px;
   border-radius: 0 6px 6px 6px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
 .dropdown-submenu:hover > .dropdown-menu {
@@ -344,10 +384,10 @@ position: relative;
 }
 .custom-login {
   display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
 }
 .custom-login > li {
   display: inline-block;
@@ -367,9 +407,9 @@ position: relative;
   position: relative;
   color: #000000;
   font-size: 14px;
-font-weight: 600;
-box-shadow: none;
-text-decoration: none;
+  font-weight: 600;
+  box-shadow: none;
+  text-decoration: none;
 }
 .custom-login > li > a > i {
   margin-right: 10px;
@@ -388,17 +428,38 @@ text-decoration: none;
 
 i {
   cursor: pointer;
+  line-height: normal !important;
 }
 
-.shop-icon:hover > i{
+.shop-icon:hover > i {
   color: rgb(218, 133, 61) !important;
 }
 
-.translate-icon{
+.translate-icon {
   font-size: 20px;
 }
 
 .lang {
   font-weight: 600 !important;
   font-size: 14px !important;
+}
+.translate-icon {
+  top: 10px !important;
+}
+
+#dropdown-blog {
+  max-width: 1020px;
+  width: 100%;
+}
+
+#dropdown-blog-container {
+  left: -455px !important;
+}
+
+#dropdown-gallery-container {
+  left: -500px !important;
+}
+
+#dropdown-shop-container {
+  left: -520px !important;
 }
